# birb-vision

./: .gitignore  Cargo.toml  NOTICE  README.md  THIRD_PARTY_NOTICES.md  asciinema-powersession.cast  birb-vision-mvs.cast
.github/agents/: core-architect.agent.md  cross-platform-backends.agent.md  industrial-backends.agent.md  linux-backends.agent.md  windows-backends.agent.md
.github/workflows/: rust.yml
crates/bindings/: README.md
crates/bindings/daheng-sys/: Cargo.toml  README.md  build.rs
crates/bindings/daheng-sys/examples/: load.rs
crates/bindings/daheng-sys/ffi/v2/: GXDef.h  GxIAPI.h
crates/bindings/daheng-sys/src/: lib.rs
crates/bindings/mvs/: .gitignore  Cargo.toml  README.md
crates/bindings/mvs-sys/: Cargo.toml  README.md  build.rs  gen-bindings.nu
crates/bindings/mvs-sys/examples/: load.rs
crates/bindings/mvs-sys/ffi/: mvs.h
crates/bindings/mvs-sys/src/: lib.rs  mvs.rs
crates/bindings/mvs/docs/development/: multithreading.md
crates/bindings/mvs/examples/: enumerate-mvs.rs  open-in-another-thread.rs
crates/bindings/mvs/src/: ctx.rs  device.rs  error.rs  lib.rs  property.rs  version.rs
crates/birb-vision/: Cargo.toml
crates/birb-vision-bundle/: Cargo.toml
crates/birb-vision-core/: Cargo.toml
crates/birb-vision-core/examples/: a.rs
crates/birb-vision-core/src/: backend.rs  channels.rs  context.rs  device.rs  device_ex.rs  device_properties.rs  device_property.rs  error.rs  event.rs  frame.rs  lib.rs  sample.rs  utils.rs
crates/birb-vision-core/src/decoders/: bgr.rs  nv12.rs  yuy.rs
crates/birb-vision-core/src/device/: io.rs
crates/birb-vision-core/src/device_properties/: id.rs
crates/birb-vision-core/src/device_property/: id.rs  property.rs
crates/birb-vision-core/src/device_property/property/: bool.rs  command.rs  enum_property.rs  numeric.rs  string.rs
crates/birb-vision-core/src/sample/: flat_sample.rs  fourcc.rs  locked_buffer.rs  pixel_format.rs
crates/birb-vision-daheng/: Cargo.toml
crates/birb-vision-daheng/examples/: a.rs
crates/birb-vision-daheng/src/: ctx.rs  device.rs  error.rs  lib.rs
crates/birb-vision-daheng/src/device/: callbacks.rs  info.rs
crates/birb-vision-directshow/: Cargo.toml
crates/birb-vision-directshow/src/: ctx.rs  error.rs  lib.rs
crates/birb-vision-directshow/src/device/: control.rs  mod.rs  sample_grabber.rs
crates/birb-vision-explorer/: Cargo.toml
crates/birb-vision-fake/: Cargo.toml
crates/birb-vision-icube/: Cargo.toml
crates/birb-vision-icube/examples/: viuer.rs
crates/birb-vision-icube/src/: birb_vision_impl.rs  ctx.rs  device.rs  error.rs  lib.rs
crates/birb-vision-media-foundation/: Cargo.toml
crates/birb-vision-media-foundation/examples/: a.rs  b.rs  c.rs
crates/birb-vision-media-foundation/examples_OLD/: a.rs
crates/birb-vision-media-foundation/src/: ctx.rs  device.rs  lib.rs  media_type.rs
crates/birb-vision-media-foundation/src/device/: control.rs  info.rs  reader_callback.rs
crates/birb-vision-media-uvc/: Cargo.toml
crates/birb-vision-media-uvc/src/: lib.rs  main.rs
crates/birb-vision-mvs/: Cargo.toml  README.md
crates/birb-vision-mvs/examples/: a.rs  a.rs_OLD  enumerate.rs  open-in-another-thread.rs  parse.rs_OLD  recv_frame.rs  recv_frame.rs_OLD  viuer.rs
crates/birb-vision-mvs/src/: birb_vision_impl.rs  ctx.rs  device.rs  error.rs  genicam.rs  lib.rs  lib_OLD.rs  pixel.rs  property.rs  version.rs
crates/birb-vision-nest/: Cargo.toml  README.md  build.rs
crates/birb-vision-nest/example-plugin/: CMakeLists.txt
crates/birb-vision-nest/example-plugin/src/: plugin.cpp
crates/birb-vision-nest/interfaces/v0/birb-vision-nest/: interface.h
crates/birb-vision-nest/src/: bindings.rs  lib.rs  main.rs
crates/birb-vision-nest/src/bindings/: v0.rs
crates/birb-vision-nokhwa/: Cargo.toml
crates/birb-vision-nokhwa/examples/: a.rs  viuer.rs
crates/birb-vision-nokhwa/src/: lib.rs
crates/birb-vision-v4l/: Cargo.toml
crates/birb-vision-v4l/examples/: a.rs
crates/birb-vision-v4l/src/: control_compat.rs  lib.rs  main.rs  main_OLD.rs
crates/birb-vision/examples/: a.rs  all_cameras.rs  basic.rs
crates/birb-vision/src/: backend.rs  channels.rs  decoders.rs  device_properties.rs  frame.rs  lib.rs  pixel_format.rs
crates/birb-vision/src/decoders/: mjpg.rs
crates/birb-vision/src/device_properties/: id.rs
crates/egui-interface/: Cargo.toml
crates/egui-interface/examples/: a.rs  b.rs
crates/egui-interface/examples_OLD/: a.rs  b.rs
crates/egui-interface/src/: lib.rs  selector.rs
examples/egui/: Cargo.toml
examples/egui/src/: main.rs
