[workspace]
resolver = "2"
members = [
    "crates/bindings/mvs-sys", "crates/bindings/daheng-sys", "crates/birb-vision",
    "crates/birb-vision-core",
    #"crates/birb-vision-bundle",
    "crates/birb-vision-explorer",
    "crates/birb-vision-fake",
    "crates/birb-vision-icube",
    "crates/birb-vision-media-foundation",
    "crates/birb-vision-media-uvc",
    "crates/birb-vision-mvs", "crates/birb-vision-nest",
    "crates/birb-vision-v4l", "crates/egui-interface", "examples/egui",
    #"crates/birb-vision-nokhwa",
]
default-members = [
    "crates/birb-vision",
]

[workspace.dependencies]
image = "0.25"
