[package]
name = "birb-vision-bundle"
version = "0.1.0"
edition = "2021"

[dependencies]
birb-vision-core = { version = "0.1.0", path = "../birb-vision-core" }
birb-vision-fake = { version = "0.1.0", path = "../birb-vision-core-fake" }
birb-vision-icube = { version = "0.1.0", path = "../birb-vision-core-icube" }
birb-vision-mvs = { version = "0.1.0", path = "../birb-vision-core-mvs" }
birb-vision-nokhwa = { version = "0.1.0", path = "../birb-vision-core-nokhwa" }
