[package]
name = "birb-vision-core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.91"
async-std = "1.13.0"
clap = { version = "4.5.16", features = ["derive"] }
#async-trait = "0.1.81"
enum-as-inner = "0.6.0"
futures = "0.3.30"
image = "0.25"
log = "0.4.22"
log-once = "0.4.1"
mozjpeg = "0.10.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1.0.65"
#mozjpeg-sys = "2.2.0"
