[package]
name = "birb-vision-core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
async-std = { version = "1.13", optional = true }
clap = { version = "4.5", features = ["derive"], optional = true }
#async-trait = "0.1.81"
enum-as-inner = "0.6"
futures = "0.3"
image = { version = "0.25", optional = true }
log = { version = "0.4", optional = true }
log-once = { version = "0.4", optional = true }
mozjpeg = { version = "0.10", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
#mozjpeg-sys = "2.2.0"

[features]
default = []
log = ["dep:log", "dep:log-once"]
conversion = ["dep:image", "dep:mozjpeg"]
timeout = ["dep:async-std"]
clap = ["dep:clap"]
