[package]
name = "birb-vision-directshow"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[target.'cfg(windows)'.dependencies]
birb-vision-core = { version = "0.1.0", path = "../birb-vision-core" }
log = "0.4.22"
strum = { version = "0.27.2", features = ["derive"] }
windows = { version = "0.58.0", features = [
    "Win32_Media_DirectShow",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_Foundation",
    "Win32_System_Variant",
    "implement",
] }
windows-core = "0.58.0"

[dependencies]
serde = { version = "1.0.204", features = ["derive"] }
