[package]
name = "birb-vision-icube"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.90"
birb-vision-core = { version = "0.1.0", path = "../birb-vision-core" }
#icube-sdk-sys = "0.2.1"
#icube-sdk-sys = { path = "../../../../../LucaCiucci/icube-sdk-sys" }
icube-sdk-sys = { path = "C:/Users/lucac/Documents/GitHub/icube-sdk-sys" }
log = "0.4.21"
thiserror = "1.0.64"

[dev-dependencies]
env_logger = "0.11.3"
