[package]
name = "birb-vision-icube"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
anyhow = "1.0.91"
birb-vision-core = { version = "0.1.0", path = "../birb-vision-core" }
icube-sdk-sys = { git = "https://github.com/LucaCiucci/icube-sdk-sys", version = "0.2.1" }
log = "0.4.21"
thiserror = "1.0.65"

[dev-dependencies]
env_logger = "0.11.3"
