[package]
name = "birb-vision-media-foundation"
version = "0.1.0"
edition = "2021"

[dependencies]
birb-vision = { version = "0.1.0", path = "../birb-vision" }
#image = "0.25.1"
image = { workspace = true }
log = "0.4.22"
scopeguard = "1.2.0"
serde = { version = "1.0.204", features = ["derive"] }
viuer = "0.7.1"
windows = { version = "0.57.0", features = ["Win32_Media_MediaFoundation", "Win32_System_Com", "Win32_Foundation", "Win32_Media_DirectShow", "Win32_Media", "Win32", "Win32_Media_KernelStreaming"] }

[dev-dependencies]
env_logger = "0.11.3"
