[package]
name = "birb-vision-media-foundation"
version = "0.1.0"
edition = "2021"

[target.'cfg(windows)'.dependencies]
birb-vision-core = { version = "0.1.0", path = "../birb-vision-core" }
#image = "0.25.1"
image = { workspace = true }
log = "0.4.22"
scopeguard = "1.2.0"
serde = { version = "1.0.204", features = ["derive"] }
windows = { version = "0.58.0", features = ["Win32_Media_MediaFoundation", "Win32_System_Com", "Win32_Foundation", "Win32_Media_DirectShow", "Win32_Media", "Win32", "Win32_Media_KernelStreaming", "implement"] }
windows-core = { version = "0.58.0", features = [] }

[dev-dependencies]
env_logger = "0.11.3"
pollster = "0.3.0"

[dependencies]
num_enum = "0.7.4"
serde = { version = "1.0.204", features = ["derive"] }
strum = { version = "0.27.2", features = ["derive"] }
