[package]
name = "birb-vision-mvs"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.21"
mvs-sys = { version = "0.1.0", path = "../bindings/mvs-sys" }
quick-xml = "0.33.0"
semver = "1.0.23"
birb-vision = { version = "0.1.0", path = "../birb-vision", optional = true }

[dev-dependencies]
env_logger = "0.11.3"
pollster = "0.3.0"
viuer = "0.7.1"

[features]
default = [
    "birb-vision",
]
birb-vision = [
    "dep:birb-vision",
]
