[package]
name = "birb-vision-nokhwa"
version = "0.1.0"
edition = "2021"

[dependencies]
birb-vision = { version = "0.1.0", path = "../birb-vision" }
image = "0.24.1"
nokhwa = "0.10.4"

[dev-dependencies]
nokhwa = { version = "0.10.4", features = ["input-native"]}
pollster = "0.3.0"
viuer = "0.7.1"
