[package]
name = "birb-vision-nokhwa"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
birb-vision-core = { version = "0.1.0", path = "../birb-vision-core" }
image = "0.24.1"
log = "0.4.21"
log-once = "0.4.1"
nokhwa = "=0.10.3"
#nokhwa = { version = "0.11.0", git="https://github.com/l1npengtul/nokhwa"}

[dev-dependencies]
clap = { version = "4.5.7", features = ["derive"] }
env_logger = "0.11.3"
nokhwa = { version = "=0.10.3", features = ["input-native"]}
#nokhwa = { version = "0.11.0", features = ["input-native"], git="https://github.com/l1npengtul/nokhwa"}
pollster = "0.3.0"
viuer = "0.7.1"
