[package]
name = "birb-vision-v4l"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
birb-vision-core = { version = "0.1.0", path = "../birb-vision-core" }
log = "0.4.22"
#async-std = "1.12.0"
#async-trait = "0.1.81"

[target.'cfg(target_os = "linux")'.dependencies]
v4l = "0.14.0"
