[package]
name = "egui-interface"
version = "0.1.0"
edition = "2021"

[dependencies]
birb-vision = { version = "0.1.0", path = "../birb-vision" }
birb-vision-mvs = { version = "0.1.0", path = "../birb-vision-mvs" }
eframe = "0.28.1"
egui = "0.28.1"
log = "0.4.22"
regex = "1.10.6"

[dev-dependencies]
env_logger = "0.11.5"
