[package]
name = "birb-vision-egui-interface"
version = "0.1.0"
edition = "2021"

[dependencies]
birb-vision-core = { version = "0.1.0", path = "../birb-vision-core" }
birb-vision-mvs = { version = "0.1.0", path = "../birb-vision-mvs" }
birb-vision-v4l = { version = "0.1.0", path = "../birb-vision-v4l" }
egui = "0.28.1"
log = "0.4.22"
regex = "1.10.6"

[dev-dependencies]
env_logger = "0.11.5"
eframe = "0.28.1"
