[package]
name = "birb-vision-egui-interface"
version = "0.1.0"
edition = "2021"

[dependencies]
birb-vision = { version = "0.1.0", path = "../birb-vision" }
egui = "0.29.1"
log = "0.4.22"
regex = "1.10.6"
scope-guard = "1.2.0"
defer = "0.2.1"
material-icons = "0.2.0"

[dev-dependencies]
env_logger = "0.11.5"
eframe = "0.29.1"
