[package]
name = "daheng-sys"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
libloading = "0.8"
log = "0.4.22"

[build-dependencies]
#bindgen = { version = "0.70.1", default-features = false, features = ["logging", "prettyplease"] }
bindgen = "0.70.1"
doxygen-rs = "0.4.2"

[dev-dependencies]
env_logger = "0.11.5"
